@@ -1,4 +1,11 @@
 2009/09/03 (TS):
+ - e1k_lldrv.c:
+    o Added comments explaining e1000_mta_clr() function (which parallels
+      intel's e1000_mta_set() and which is needed to remove a single
+      MC hash from filter.
+    o Implemented multicast support functions.
+
+2009/09/03 (TS):
  - drvGnrIpBasic.c:
     o Added support for adding/removing MC addresses from multicast
       filter.
